# tt-perf-report

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-pypi.yml  verify-csv-output.yml  verify-ttnn-visualiser-data-validity.yml
src/tt_perf_report/: __init__.py  perf_report.py  view_stacked.py
tests/: test_validate_csv_output.py  validate_csv_output.py  validate_data_for_ttnn_visualizer.py
tests/data/: bh20_oft.csv  bh20_oft_integral_image_trace.csv  bh_64_clip_encoder_1.csv  bh_8xp150_deepseek_v3_d_p.csv  bh_p100_dlv3.csv  ops_perf_results_2025_09_18_11_39_20.csv  wh_clip_encoder_2.csv
